--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,6 @@
 
 body {
-background-color: /*BurlyWood*/ #99ccff;
+background-color: /*MintGreen*/ #80ffdf;
 /* ebb: Looking for colors and color codes? Try the HTML color picker: https://www.w3schools.com/colors/colors_picker.asp */
 color: indigo;
 font-family: arial, helvetica, sans-serif;
